Report: lab1 implementation.

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,11 +1,14 @@
 all: lab1.pdf lab2.pdf
 
-%.pdf: %.tex title.tex
+%.pdf: %.tex title.tex Task1NeuralNetwork.ps $(wildcard *.png)
 	xelatex $<
 	xelatex $<
 
 open.%: lab%.pdf
 	xdg-open $<
+
+%.ps: %.svg
+	convert $< $@
 
 clean:
 	rm -f main.pdf *.aux *.log *.toc
